# distant_core

./: .clang-tidy  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/features/: CMakeLists.txt
examples/features/disassembly/: CMakeLists.txt  main.cpp
examples/features/memory_edit/: CMakeLists.txt  main.cpp
examples/features/pattern_scan/: CMakeLists.txt  main.cpp
examples/features/target_app/: CMakeLists.txt  main.cpp
examples/real_world/: CMakeLists.txt
examples/real_world/app/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  main.cpp
examples/real_world/bhop/: CMakeLists.txt  hazedumper.hpp  main.cpp
examples/real_world/injectable_dlls/: CMakeLists.txt
examples/real_world/injectable_dlls/basic/: CMakeLists.txt  main.cpp
examples/real_world/injectable_dlls/opengl/: CMakeLists.txt  main.cpp
examples/real_world/injector/: CMakeLists.txt  main.cpp
examples/real_world/injector/load_library/: CMakeLists.txt  main.cpp
examples/real_world/injector/manual_mapping/: CMakeLists.txt  main.cpp
examples/real_world/target_applications/: CMakeLists.txt
examples/real_world/target_applications/opengl_triangle/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  window.hpp
examples/target_apps/: CMakeLists.txt
examples/target_apps/opengl_imgui/: CMakeLists.txt  main.cpp
examples/target_apps/opengl_triangle/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  window.hpp
examples/target_apps/simple/: CMakeLists.txt  main.cpp
include/distant/: core.hpp  injection.hpp  memory.hpp  process.hpp  signature.hpp
include/distant/platform/: native.hpp
include/distant/platform/windows/: injection.hpp  native.hpp  process.hpp
include/distant/utilities/: signature.hpp
src/: CMakeLists.txt  core.cpp
src/platform/windows/: injection.cpp  module.cpp  process.cpp  virtual_buffer.cpp
